--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-device-info": "^10.3.0",
